# RBS

./: .gitignore  CMakeLists.txt  RBS_Results.root  RBS_Saving.root  example.cc  init_vis.mac  shoot.mac  shoot_base.mac  vis.mac
Result/: ConfidenceLevel_Dim.py  Correlation.root  Correlation_Plot.py  Correlation_Plot_s.py  Correlation_Plot_s_thin.py  Exp_Hist.root  MultiTh_G4  Plot_All.py  Plotting_accessible_ROOT_files.py  RBS.C  RBS.py  RBS_2SCAN  RBS_2SCAN.C  RBS_AB.C  RBS_All.C  RBS_All_Results.root  RBS_All_forMCMC  RBS_All_forMCMC.C  RBS_All_forMCMC_fit  RBS_All_forMCMC_fit.C  RBS_All_xs_x2.C  RBS_Fit.root  RBS_Results.root  RBS_SCAN.C  RBS_Saving.root  RBS_Saving_woxs.root  SIM.txt  Selecting_ROOT_files.py  StretchMoveInteger.py  chain (copy).npy  chain.npy  chain_thin_1p2_4par_40w_binned_2000.npy  chain_thin_1p2_4par_40w_binned_wxs.npy  clean_mcmc.py  countour.py  data_save1.npy  data_save1_thin_woxs.npy  data_save1_thin_wxs.npy  data_save1_thin_wxs2.npy  data_save_woxs.npy  (+18 more)
Result/2023W43/: Config000.mpa  RBS_Pos1.mpa  RBS_Pos2.mpa  RBS_Pos3.mpa  RBS_Pos4.mpa  RBS_STDAuSi.mpa  STIM_PC.mpa  STIM_PC_bis.mpa  STIM_Pos1.mpa  (+6 more)
include/: ActionInitialization.hh  Analysis.hh  Detector.hh  DetectorConstruction.hh  EventAction.hh  Layer.hh  Messenger.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  Stepper.hh  SteppingAction.hh  Tracking.hh
src/: ActionInitialization.cc  Detector.cc  DetectorConstruction.cc  EventAction.cc  Layer.cc  Messenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  Stepper.cc  SteppingAction.cc  Tracking.cc
(+26 files in other folders)
